--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jasmine-ts",
-    "watch": "chokidar src spec -c 'npm test'"
+    "watch": "chokidar 'src/**/*.ts' 'spec/**/*.ts' -c 'npm test'"
   },
   "keywords": [],
   "author": "KentarouTakeda <takeda@youmind.jp> (https://github.com/KentarouTakeda)",
@@ -19,9 +19,11 @@
     "tinify": "^1.6.0-beta.2"
   },
   "devDependencies": {
+    "@types/fs-extra": "^8.0.1",
     "@types/glob": "^7.1.1",
     "@types/jasmine": "^3.4.6",
     "chokidar-cli": "^2.1.0",
+    "fs-extra": "^8.1.0",
     "jasmine-console-reporter": "^3.1.0",
     "jasmine-ts": "^0.3.0",
     "ts-node": "^8.5.2",
