--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jasmine-console-reporter": "^3.1.0",
     "jasmine-ts": "^0.3.0",
     "ts-node": "^8.5.2",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "yargs": "^14.2.0"
   }
 }
