--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "author": "KentarouTakeda <takeda@youmind.jp> (https://github.com/KentarouTakeda)",
   "license": "MIT",
   "dependencies": {
+    "commander": "^4.0.1",
     "dotenv": "^8.2.0",
     "glob": "^7.1.6",
     "tinify": "^1.6.0-beta.2"
   },
   "devDependencies": {
+    "@types/commander": "^2.12.2",
     "@types/fs-extra": "^8.0.1",
     "@types/glob": "^7.1.1",
     "@types/jasmine": "^3.4.6",
