--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "test": "jasmine-ts",
     "watch": "chokidar 'src/**/*.ts' 'spec/**/*.ts' -c 'npm test'"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/KentarouTakeda/tinify-all-images.git"
+  },
   "keywords": [],
   "author": "KentarouTakeda <takeda@youmind.jp> (https://github.com/KentarouTakeda)",
   "license": "MIT",
   "dependencies": {
     "commander": "^4.0.1",
     "dotenv": "^8.2.0",
+    "fs-extra": "^8.1.0",
     "glob": "^7.1.6",
     "tinify": "^1.6.0-beta.2"
   },
@@ -24,7 +29,6 @@
     "@types/glob": "^7.1.1",
     "@types/jasmine": "^3.4.6",
     "chokidar-cli": "^2.1.0",
-    "fs-extra": "^8.1.0",
     "jasmine": "^3.5.0",
     "jasmine-console-reporter": "^3.1.0",
     "jasmine-ts": "^0.3.0",
