--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tinify-all-images",
-  "version": "0.0.1",
+  "name": "@kentaroutakeda/tinify-all-images",
+  "version": "0.0.2",
   "description": "指定ディレクトリ配下の全てのpng/jpgをtinypngに通す",
   "bin": {
     "tinify-all-images": "./bin/index.js"
@@ -16,6 +16,7 @@
     "url": "https://github.com/KentarouTakeda/tinify-all-images.git"
   },
   "files": [
+    "bin/",
     "dist/"
   ],
   "keywords": [],
